eks-local/apps/guestbook/overlays/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: guestbook
spec:
  hosts:
  - "*"
  gateways:
  - guestbook-gateway
  http:
  - route:
    - destination:
        host: guestbook
        port:
          number: 80
